--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       sh -c "alembic -c /app/alembic.ini upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
 
 
+
   celery-worker:
     build:
       context: ./fastapi_itm
@@ -93,6 +94,27 @@ services:
         condition: service_healthy
 
 
-# Секция volumes должна быть на верхнем уровне, вне services
+  prometheus:
+    image: prom/prometheus:v2.47.0
+    container_name: prometheus
+    hostname: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
+
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    hostname: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+
+
 volumes:
   postgres_data:
+  grafana_data:
