--- a/fastapi_itm/requirements.txt
+++ b/fastapi_itm/requirements.txt
@@ -2,10 +2,16 @@ fastapi==0.95.2
 uvicorn==0.22.0
 python-multipart==0.0.6
 sqlalchemy==2.0.15
-psycopg2-binary==2.9.9
-asyncpg==0.27.0
-celery==5.2.7
+psycopg2-binary==2.9.6
 pytesseract==0.3.10
 pillow==9.5.0
-pydantic==1.10.7
-alembic == 1.16.4
+celery==5.3.1
+pika==1.3.2
+alembic==1.11.1
+python-jose==3.3.0
+passlib==1.7.4
+prometheus-client==0.17.0
+starlette-prometheus==0.10.0
+aiohttp==3.8.4
+python-json-logger==2.0.7
+httpx==0.24.1
